--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.11.0",
+    "recharts": "^3.6.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "zustand": "^5.0.9"
