--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "axios": "^1.13.4",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.1.0",
     "cors": "^2.8.5",
