--- a/server/.env.example
+++ b/server/.env.example
@@ -27,9 +27,11 @@ NODE_ENV=production
 # ============================================
 # CORS (Frontend URL)
 # ============================================
+# IMPORTANT: Multiple origins must be comma-separated
 # Development: http://localhost:3001,http://localhost:5173
-# Production: https://your-app.vercel.app
-ALLOWED_ORIGINS="https://your-app.vercel.app"
+# Production: https://josea1-0.vercel.app
+# Both: https://josea1-0.vercel.app,http://localhost:3001,http://localhost:5173
+ALLOWED_ORIGINS="https://josea1-0.vercel.app"
 
 # ============================================
 # RATE LIMITING
