--- a/client/.env.example
+++ b/client/.env.example
@@ -6,9 +6,11 @@
 # ============================================
 # BACKEND API URL
 # ============================================
-# Development: Use proxy (leave empty or set to /api)
-# Production: Set to your deployed backend URL
+# Development: Use proxy (leave empty or use /api)
 # VITE_API_URL=/api
 
-# For production deployment on Vercel:
-# VITE_API_URL=https://your-api.railway.app/api
+# Production (Vercel): Set to your Render backend URL with /api
+# VITE_API_URL=https://josea1-0.onrender.com/api
+
+# IMPORTANT: In Vercel dashboard, set this environment variable to:
+# VITE_API_URL=https://josea1-0.onrender.com/api
