--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.13.4",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.1.0",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.3.1",
@@ -31,6 +32,7 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "socket.io": "^4.6.0"
   },
   "devDependencies": {
